# health-api-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: .gitignore  main.py
helm-chart/health-api/: Chart.yaml  values.yaml
helm-chart/health-api/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  dockerhub-secret.yaml  namespace.yaml  service.yaml
tests/: test_health_api.py
