[project]
name = "health-api-service"
version = "1.0.0"
description = "Health API Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
